tests/snapshots/search_eval__phase2_techdocs_metrics.snap
---
source: tests/search_eval.rs
expression: metrics
---
{
  "query_count": 5,
  "success_at_1": 1.0,
  "success_at_3": 1.0,
  "success_at_5": 1.0,
  "mrr": 1.0,
  "ndcg_at_10": 1.181
}
